Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-104951

QT_WIDGETS_RHI/QOpenGLWidget lead to crash on Wayland

    XMLWordPrintable

Details

    • Linux/Wayland
    • 5b334729d3 (qt/qtbase/dev) 5b334729d3 (qt/tqtc-qtbase/dev) d2ed18382d (qt/qtbase/6.4) d2ed18382d (qt/tqtc-qtbase/6.4)

    Description

      Getting the following errors followed by segmentation fault with QT_WIDGETS_RHI or QOpenGLWidget

      QWaylandGLContext::makeCurrent: eglError: 3009, this: 0x7fa0437f8700 
      
      QRhiGles2: Failed to make context current. Expect bad things to happen.
      Failed to create QRhi for QBackingStoreRhiSupport
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lagocs Laszlo Agocs
            ilya-fedin Ilya Fedin
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes